--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -2,9 +2,9 @@ name: ktlint
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ master ]
   pull_request:
-    branches: [ develop ]
+    branches: [ master ]
 
 jobs:
   ktlint:
